@@ -1,4 +1,5 @@
 1.0.5:
+* add genic overlap percentage
 * create gmtk-parameter heatmap from params.params or input.master
 * add mne parameter to change track and segment label labels
 
